Oppdater til å kjøre på chainguard