@@ -1,22 +1,6 @@
-FROM eclipse-temurin:21 as jre-build
-
-# Create a custom Java runtime
-RUN $JAVA_HOME/bin/jlink \
-         --add-modules ALL-MODULE-PATH \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /javaruntime
-
-# Runtime
-FROM debian:buster-slim
+FROM cgr.dev/chainguard/jre-lts:latest
 ENV TZ="Europe/Oslo"
-ENV JAVA_HOME=/opt/java/openjdk
-ENV PATH "${JAVA_HOME}/bin:${PATH}"
-COPY --from=jre-build /javaruntime $JAVA_HOME
+COPY ./build/libs/arbeidsgiver-mock-enhetsregisteret-all.jar app.jar
 
-COPY ./build/install/* /
-
-USER nobody
-CMD ["arbeidsgiver-mock-enhetsregisteret"]
+EXPOSE 8080
+CMD ["-jar", "app.jar"]
